# Construction-of-Optimal-Portfolios-in-Incomplete-Markets

./: README.md  pyproject.toml
Part 1/: 02_black_scholes_merton_validation.ipynb  03_jump_diffusion_incomplete_market.ipynb
Part 2/: 04_constrained_black_scholes.ipynb
optiport/Part 1/: 01_discrete_dynamic_programming.ipynb
optiport/Part 2/: 05_numerical_cross_check.ipynb
optiport/src/optiport/constraints/: constrained_black_scholes.py  dual_gradient.py
optiport/src/optiport/discrete/: dynamic_programming.py  market.py
optiport/tests/: test_dual_gradient.py  test_jump_diffusion.py  test_jump_diffusion_dual.py  test_merton_validation.py  test_utility.py
src/optiport/: utility.py
src/optiport/constraints/: support_function.py
src/optiport/continuous/: black_scholes.py  jump_diffusion.py
src/optiport/discrete/: regime_market.py
tests/: test_constrained.py  test_discrete_dp.py
