[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optiport"
version = "0.1.0"
description = "Construction of optimal portfolios in incomplete markets: duality methods, discrete and continuous time, constrained and unconstrained optimization."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "TBC"}]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
